--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     </div>
 
 
+    <div class="menuBox">
+        <div id="myDropdown" class="dropdown-content">
+            <a href="https://www.google.com">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </div>
+
+    <div class="product_container">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi quibusdam necessitatibus illum corrupti sed qui culpa ullam alias fugit aliquam, reprehenderit provident ipsa reiciendis similique distinctio ea fuga! Reprehenderit cum earum nisi aspernatur iure obcaecati magnam, sit excepturi debitis quidem cumque fugit enim mollitia, praesentium repellat. Molestiae natus, aperiam impedit delectus repellat dolores quisquam aliquid nemo accusamus consectetur vel laboriosam sunt sit ipsa libero praesentium voluptatem dolore ratione a pariatur minus? Maxime alias explicabo at excepturi eos voluptatibus, cumque, vero beatae obcaecati itaque, nisi pariatur? Dolores, fuga accusantium. Quas laudantium eaque deleniti tenetur! Neque possimus officia soluta, nobis ducimus quod!</p>
+    </div>
+
 
     <script src="assets/js/script.js"></script>
 </body>
