--- a/index.html
+++ b/index.html
@@ -6,26 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+
+
+    <!-- js external links -->
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+
 </head>
 <body>
-    <div class="header">
-        <h3>Logo</h3>
-        <h2>Compare & Ping</h2>
-        <h3 class="menu">Menu</h3>
-    </div>
 
+<header>
+        <nav>
+          <div id="brand">
+            <div id="logo">
+                <a href="https://www.facebook.com/whatsapp8090920577/" target="_blank">
+                    <img src="https://scontent.fblr2-1.fna.fbcdn.net/v/t1.0-9/52835916_1072903639568142_8046148383221481472_n.png?_nc_cat=102&_nc_ht=scontent.fblr2-1.fna&oh=1747e0fe655156cf524f2ec928a99ffc&oe=5D2F3F5A" alt="" style="width: 75px; border-radius: 50%;">
+                </a>
+                </div>
+            <div id="word-mark">Compare & Ping</div>
+          </div>
+          <div id="menu">
+            <div id="menu-toggle">
+              <div id="menu-icon">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+              </div>
+            </div>
+            <ul>
+              <li style="list-style: none;"><a href="#" style="text-decoration: none;">Product Menu</a></li>
+              
+            </ul>
+          </div>
+        </nav>
+        <div id="hero-section">
+          <div id="head-line" style="margin-bottom: 20px;">Items Are Only Available In India</div>
 
-    <div class="menuBox">
-        <div id="myDropdown" class="dropdown-content">
-            <a href="https://www.google.com">Home</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+          <form action="Post">
+              <input type="search" placeholder="Search your item here ..!" required style="width: 400px; height: 30px;">
+                <input type="submit" name="" id="" value="Submit">
+          </form>
+
         </div>
-    </div>
+        
+</header>
 
-    <div class="product_container">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi quibusdam necessitatibus illum corrupti sed qui culpa ullam alias fugit aliquam, reprehenderit provident ipsa reiciendis similique distinctio ea fuga! Reprehenderit cum earum nisi aspernatur iure obcaecati magnam, sit excepturi debitis quidem cumque fugit enim mollitia, praesentium repellat. Molestiae natus, aperiam impedit delectus repellat dolores quisquam aliquid nemo accusamus consectetur vel laboriosam sunt sit ipsa libero praesentium voluptatem dolore ratione a pariatur minus? Maxime alias explicabo at excepturi eos voluptatibus, cumque, vero beatae obcaecati itaque, nisi pariatur? Dolores, fuga accusantium. Quas laudantium eaque deleniti tenetur! Neque possimus officia soluta, nobis ducimus quod!</p>
-    </div>
+      <section id="section00">
+        <div id="heading">Item 1</div>
+      </section>
+      <section id="section01">
+        <div id="heading">Item 2</div>
+      </section>
+      <section id="section02">
+        <div id="heading">Item 3</div>
+      </section>
+      <section id="section03">
+        <div id="heading">Item 4</div>
 
 
     <script src="assets/js/script.js"></script>
